# NotifyTube

./: .env.example  .gitattrubutes  .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: django.yml
api/: urls.py  views.py
app/: apps.py  forms.py  urls.py  views.py
app/static/css/: style.css
app/static/js/: search.js
app/templates/app/: base.html  index.html  main.html  query.html  unsubscribe.html  unsubscribe_success.html
app/templates/app/components/: footer.html  nav.html  search.html  video.html
core/: settings.py  urls.py
notifier/: admin.py  models.py  tests.py  views.py
notifier/lib/: collect.py  database_iterator.py  logger.py  metadata_extractor.py  notify.py
notifier/management/commands/: collectcron.py  collectnow.py  cron.py  notify.py
notifier/migrations/: 0001_initial.py  0002_alter_youtubequery_latest.py  0003_email_subscription.py  0004_subscription_last_sent.py  0005_subscription_slug.py  0006_alter_subscription_slug.py  0007_alter_subscription_slug.py  0008_alter_subscription_slug.py
notifier/static/tests/: negative.html  positive.html
notifier/templates/emails/: template.html
notifier/tests/: test_collect.py  test_database_functions.py
notifier/tests/collect/: positive.json
