[tool.poetry]
name = "youtube-search-notifier"
version = "0.1.0"
description = ""
authors = ["E <e@pastel.codes>"]
license = "GNU General Public License Version 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
Django = "^5.0.6"
django-environ = "^0.11.2"
sentry-sdk = "^2.6.0"
pylint = "^3.2.3"
coverage = "^7.5.4"
selenium = "^4.22.0"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
psycopg2 = "^2.9.9"
django-on-heroku = "^1.1.2"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
bandit = "^1.7.9"
pytest = "^8.2.2"
djlint = "^1.34.1"
pycln = "^2.4.0"
pylint-django = "^2.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.djlint]
profile = "django"
use_gitignore = true
indent = 2
format_js = false
format_css = false
blank_line_before_tag = "load,extends"
blank_line_after_tag = "load,extends"
ignore = "H006,H021"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
# -- recommended but optional:
python_files = [
  "test_*.py",
  "*_test.py",
  "test*.py",
  "tests/*.py",
  "testing/python/*.py",
]

[tool.pylint.main]
load-plugins = ["pylint_django"]

[tool.pylint.format]
max-line-length = "88"
